fix: arrow up positioning on mobile

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -25,16 +25,16 @@ html {
     text-align: center;
     text-decoration: none;
     color: $azure;
-    padding-top: 2px;
     width: 40px;
     height: 40px;
     border: 2px solid $azure;
     border-radius: 50%;
+    display: table-cell;
+    line-height: 40px;
     right: 3rem;
     bottom: 2rem;
     @media (max-width: 768px) {
         right: 2rem;
-        padding-top: 4px;
     }
 }
 
